# AI-Crypto-Hedge-Fund-CMF

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md  manifest.json
data/processed/: universe_large.csv  universe_small.csv
data/sample/: prices_1m.parquet  returns_1m.parquet
data/sample/raw/: ADAUSDT.parquet  BNBUSDT.parquet  (+4 more)
docs/: README.md  backtesting.md  baseline_strategy.md  deliverables.md  dynamic_rebalancing.md  large_universe.md  qa_report.md  rubric_checklist.md  single_asset_models.md  static_portfolio.md  submission_checklist.md
notebooks/: final_solution.ipynb
reports/metrics/: baseline_metrics.json  large_universe_metrics.json  large_universe_selected_assets.csv  rebalance_events.csv  rebalancing_metrics.json  single_asset_cost_aware_boosting.json  single_asset_model_comparison.json  single_asset_validation_model.json  static_portfolio_metrics.json
reports/slides/: presentation_outline.md  technical_implementation.typ  technical_implementation_speaker_notes.md
scripts/: prepare_data.py  run_baseline_strategy.py  run_cost_aware_boosting.py  run_dynamic_rebalancing.py  run_large_universe.py  run_single_asset_models.py  run_static_portfolio.py  run_validation_model.py
src/ai_crypto_hedge_fund/: __init__.py  backtest.py  metrics.py  paths.py
tests/: test_baseline_strategy.py  test_cost_aware_boosting.py  test_data_pipeline.py  test_dynamic_rebalancing.py  test_import.py  test_large_universe.py  test_metrics_and_backtest.py  test_single_asset_models.py  test_static_portfolio.py  test_validation_model.py
(+23 files in other folders)
