[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-crypto-hedge-fund-cmf"
version = "0.1.0"
description = "Reproducible MVP for an AI agent-based crypto hedge fund research and backtesting system."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "AI Crypto Hedge Fund CMF Team" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "scikit-learn>=1.4",
  "statsmodels>=0.14",
  "scipy>=1.12",
  "jupyter>=1.0",
  "pytest>=8.0",
  "pyarrow>=15.0",
  "requests>=2.31"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
